[ui] fix weak contrast on green balance

--- a/src/Account/style.less
+++ b/src/Account/style.less
@@ -12,7 +12,7 @@
   }
 
   .account-balance-owes-you > div{
-    color: @light-green-500;
+    color: @light-green-600;
   }
 
   .account-balance-settled-up{
